test/org/midica/testfiles/failing/soundbank-file-no-args.midica
INCLUDE inc/instruments.midica

SOUNDBANK

0 c /4
